<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ToggleButton
        android:id="@+id/card_list_filter_button_rarity_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="setRarities"
        android:textOn="@string/rarity_free"
        android:textOff="@string/rarity_free" />

    <ToggleButton
        android:id="@+id/card_list_filter_button_rarity_common"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="setRarities"
        android:textOn="@string/rarity_common"
        android:textOff="@string/rarity_common" />

    <ToggleButton
        android:id="@+id/card_list_filter_button_rarity_rare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="setRarities"
        android:textOn="@string/rarity_rare"
        android:textOff="@string/rarity_rare" />

    <ToggleButton
        android:id="@+id/card_list_filter_button_rarity_epic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="setRarities"
        android:textOn="@string/rarity_epic"
        android:textOff="@string/rarity_epic" />

    <ToggleButton
        android:id="@+id/card_list_filter_button_rarity_legendary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="setRarities"
        android:textOn="@string/rarity_legendary"
        android:textOff="@string/rarity_legendary" />

</LinearLayout>