<?xml version="1.0" encoding="utf-8"?>
<!--
android:descendantFocusability="blocksDescendants"
is to make the list item clickable
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal" >

    <!-- Cost of the card -->

    <TextView
        android:id="@+id/card_list_row_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/cost_gem"
        android:gravity="center"
        android:textColor="@color/cost_color"
        android:textSize="@dimen/card_row_cost_text_size" />

    <!-- Title of the card -->

    <com.util.AutoResizeTextView
        android:id="@+id/card_list_row_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/card_row_title_left_margin"
        android:layout_toRightOf="@id/card_list_row_cost" />

    <!-- Image of the card -->

    <ImageView
        android:id="@+id/card_list_row_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_row_image_right_margin"
        android:contentDescription="@string/card_list_row_image_content_description" />

    <LinearLayout
        android:id="@+id/card_list_row_amount_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/card_list_row_image" >

        <!-- Amount of card in deck (Disabled initially) -->

        <com.util.AutoResizeTextView
            android:id="@+id/card_list_row_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/card_row_cost_text_size"
            android:visibility="invisible" />
    </LinearLayout>

    <!-- Add card button (Disabled initially) -->

    <ImageButton
        android:id="@+id/card_list_row_add_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/card_row_button_margin_horizontal"
        android:layout_marginRight="@dimen/card_row_button_margin_horizontal"
        android:layout_toLeftOf="@id/card_list_row_amount_container"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/card_list_row_add_card_button_content_description"
        android:onClick="addCard"
        android:src="@drawable/add_card"
        android:visibility="invisible" />

    <!-- Delete card button (Disabled initially) -->

    <ImageButton
        android:id="@+id/card_list_row_delete_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/card_row_button_margin_horizontal"
        android:layout_marginRight="@dimen/card_row_button_margin_horizontal"
        android:layout_toLeftOf="@id/card_list_row_add_card"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/card_list_row_delete_card_button_content_description"
        android:onClick="deleteCard"
        android:src="@drawable/delete_card"
        android:visibility="invisible" />

</RelativeLayout>